Store defined columns in TipiTable, use them in dialogs to choose columns; rewrite of reading in stored columns: take description and editable from defined column and dont display columns that no longer exist